Initialize OpenGL context and basic render loop, change glfw module to my fork

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,30 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(SolarSystem2D LANGUAGES CXX)
+project(SolarSystem2D LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# --------------------------
+# Submodules
+# --------------------------
 add_subdirectory(external/glfw)
 
+# --------------------------
+# GLAD as vendor
+# --------------------------
+add_library(glad STATIC
+    external/glad/src/glad.c
+)
+
+target_include_directories(glad
+    PUBLIC
+        external/glad/include
+)
+
+# --------------------------
+# Executable
+# --------------------------
 add_executable(SolarSystem2D
     src/main.cpp
     src/core/Application.cpp
@@ -16,12 +34,15 @@ add_executable(SolarSystem2D
 target_include_directories(SolarSystem2D
     PRIVATE
         src
-        external/glfw/include
+        external/glad/include
 )
 
+# --------------------------
+# Linking
+# --------------------------
 target_link_libraries(SolarSystem2D
-    glfw
+    PRIVATE
+        glad
+        glfw
+        GL
 )
-
-
-
