Fix orbit scaling by separating orbit and visual entities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(SolarSystem2D
     src/scene/Planet.cpp
     src/scene/Orbit.cpp
     src/scene/Entity.cpp
+    src/renderer/DebugRenderer2D.cpp
 )
 
 target_include_directories(SolarSystem2D
